Dibuat menggunakan Colab

--- a/klasifikasi_bunga(3).ipynb
+++ b/klasifikasi_bunga(3).ipynb
@@ -1,8 +1,18 @@
 {
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/natalia081204/Code-Tugas_2-Klasifikasi/blob/main/klasifikasi_bunga(3).ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "M4Q3F4939sNK"
       },
@@ -25,7 +35,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "ZrDMr7LRSiPA"
       },
@@ -37,7 +47,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "RldsaZrMk6Mm"
       },
@@ -48,7 +58,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -75,7 +85,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "ghlZIbJvlGoc"
       },
@@ -93,7 +103,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -119,7 +129,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "id": "U2XLmrMqnAWc"
       },
@@ -145,7 +155,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "id": "4fqIfNB0oFEZ"
       },
@@ -158,7 +168,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "id": "tGLwZgHuoZ8q"
       },
@@ -171,7 +181,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "id": "sNE6VhYwoogv"
       },
@@ -184,7 +194,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -213,7 +223,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "id": "udfXM2yvpuTt"
       },
@@ -233,7 +243,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -293,7 +303,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "id": "suWCOrwcrBrg"
       },
@@ -306,7 +316,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "id": "zc6D2ET0rKee"
       },
@@ -317,7 +327,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -517,7 +527,7 @@
         "id": "b5RLhGNzkLeF",
         "outputId": "83642b8c-54f5-48b4-fae2-30ef5c9c4e43"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -753,7 +763,7 @@
         "id": "JA793UENkNfD",
         "outputId": "62e48788-3fad-420c-ecd7-572933341d3b"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -782,7 +792,7 @@
         "id": "DaEWbkCikgu7",
         "outputId": "b25d10f4-c1d5-43fc-9951-bf61d8cab519"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -830,7 +840,7 @@
         "id": "qFW6cyyfZl4G",
         "outputId": "b6a2edf1-357a-4b62-8b55-b7dd861a4679"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -890,7 +900,7 @@
         "id": "BFUSKwRxZygw",
         "outputId": "ec383d83-9492-4709-e3f0-35c6903168ed"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -963,7 +973,7 @@
         "id": "esPErc8biIh0",
         "outputId": "425a726e-ff70-48af-e03a-0cb3fe6c7e7a"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1068,7 +1078,7 @@
       "metadata": {
         "id": "8DMPHQb9kHNk"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1130,13 +1140,16 @@
       "metadata": {
         "id": "aR3Cwh-klsCW"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     }
   ],
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "mount_file_id": "1csdTIR3UW5lCc8Bt69TPnjXtpc1EfNQQ",
+      "authorship_tag": "ABX9TyOa2kCfRMJ8tttbLC097ngt",
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
